Get Users added
